Minor alignment fixes

--- a/main.css
+++ b/main.css
@@ -17,7 +17,6 @@ main {
 
 .game-title {
   float: left;
-  font-size: 3em;
 }
 
 .score-label {
